# spoon-agent

./: .env.example  .gitignore  LICENSE  README.md  SUBMISSION.md  TEAM.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
spoon_agent/: .dockerignore  Dockerfile  __init__.py  config.py  main.py
spoon_agent/adapters/: binance.py  tavily.py
spoon_agent/graphs/: trading_analysis.py
spoon_agent/graphs/nodes/: aggregation.py  data_fetching.py  extraction.py  token_analysis.py
spoon_agent/prompts/: coin_extraction.py  final_report.py  news_analysis.py  technical_analysis.py
spoon_agent/utils/: formatters.py
tests/: README.md  __init__.py  conftest.py  test_main_handler.py  test_spoon_agent_live.py  test_trading_analysis_graph.py
tests/e2e/: __init__.py
